--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,6 +27,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         distribution: 'jabba'
+        distribution-alias: 'jbr-17'
     - name: Build with Gradle
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
